--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta name="viewport" content="minimum-scale=1" />
-    <link rel="icon" href="favicon.svg" />
+    <link rel="icon" href="assets/images/favicon.svg" />
 
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -20,7 +20,7 @@
     />
 
     <!-- main app -->
-    <script src="app.js" type="module" defer></script>
+    <script src="index.js" type="module" defer></script>
     <link rel="stylesheet" href="assets/css/main.css" />
 
     <!-- sal.js -->
